<resources>
    <string name="app_name">WLTRACKING MOBILE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Clientes</string>
    <string name="tab_text_2">Veíuclos</string>
    <string name="tab_text_3">Rastreadores</string>
    <string name="tab_text_4">Chips</string>
    <string name="Hint1">Nome:</string>
    <string name="Hint2">CPF:</string>
    <string name="Hint3">Telefone:</string>
    <string name="Hint4">Dia da mensalidade:</string>
    <string name="Hint5">Valor da mensalidade:</string>
    <string name="Hint6">Vencimento do contrato:</string>
    <string name="Hint7">Notas:</string>
</resources>