<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ActivityVisualizaClienteTextInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:text="Davi"
                android:id="@+id/ActivityVisualizaClienteTextInput1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Hint1"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ActivityVisualizaClienteTextInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ActivityVisualizaClienteTextInput2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Hint2"
                android:inputType="number"
                android:digits="1234567890-."/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ActivityVisualizaClienteTextInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ActivityVisualizaClienteTextInput3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Hint3"
                android:inputType="number"
                android:digits="1234567890-() "/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ActivityVisualizaClienteTextInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ActivityVisualizaClienteTextInput4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Hint4"
                android:inputType="number"
                android:digits="1234567890"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ActivityVisualizaClienteTextInputLayout5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ActivityVisualizaClienteTextInput5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Hint5"
                android:inputType="numberDecimal"
                android:digits="1234567890,.R$"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ActivityVisualizaClienteTextInputLayout6"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ActivityVisualizaClienteTextInput6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Vencimento do contrato:"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ActivityVisualizaClienteTextInputLayout7"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ActivityVisualizaClienteTextInput7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Hint7"/>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/ActivityVisualizaClienteButtonConfirmar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:backgroundTint="#15CD00"
            android:textSize="20sp"
            android:text="CONFIRMAR">

        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>