<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/ActivityAddClienteButtonClientes"
        android:layout_width="180dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textAlignment="center"
        android:text="Cliente"
        android:src="@drawable/ic_action_cliente"
        >
    </Button>
    <Button
        android:id="@+id/ActivityAddClienteButtonVeiculos"
        android:layout_width="180dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="14dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textAlignment="center"
        android:text="Veículo"
        android:src="@drawable/ic_action_cliente"
        >
    </Button>
    <Button
        android:id="@+id/ActivityAddClienteButtonRastreadores"
        android:layout_width="180dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/ActivityAddClienteButtonClientes"
        app:layout_constraintTop_toBottomOf="@id/ActivityAddClienteButtonClientes"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textAlignment="center"
        android:text="Rastreador"
        android:src="@drawable/ic_action_cliente"
        >
    </Button>
    <Button
        android:id="@+id/ActivityAddClienteButtonChips"
        android:layout_width="180dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/ActivityAddClienteButtonVeiculos"
        app:layout_constraintTop_toBottomOf="@id/ActivityAddClienteButtonVeiculos"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textAlignment="center"
        android:text="Chip"
        android:src="@drawable/ic_action_cliente"
        >
    </Button>
    <ScrollView
        android:layout_marginTop="130dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ActivityAddClienteTextInputLayout1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ActivityAddClienteTextInput1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Hint1"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ActivityAddClienteTextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ActivityClienteAddTextInput2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Hint2"
                    android:inputType="number"
                    android:digits="1234567890-. "/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ActivityAddClienteTextInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ActivityAddTextInput3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Hint3"
                    android:inputType="number"
                    android:digits="1234567890-() "/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ActivityAddTextInputLayout4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ActivityAddClienteTextInput4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Hint4"
                    android:inputType="number"
                    android:digits="1234567890"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ActivityAddClienteTextInputLayout5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ActivityAddClienteTextInput5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Hint5"
                    android:inputType="number"
                    android:digits="1234567890,.$"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:clickable="false"
                android:textSize="16sp"
                android:text="Data de vencimento do contrato:">

            </Button>
            <CalendarView
                android:id="@+id/ActivityAddClienteCalendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

            </CalendarView>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ActivityAddClienteTextInputLayout6"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ActivityAddTextInput7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Hint7"/>

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/ActivityAddClienteButtonConfirmar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:clickable="false"
                android:backgroundTint="#15CD00"
                android:textSize="20sp"
                android:text="CONFIRMAR">

            </Button>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>