<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ActivityVisualizaChipTextInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ActivityVisualizaChipTextInput1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="IMEI:"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ActivityVisualizaChipTextInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ActivityVisualizaChipTextInput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Modelo:"
                android:inputType="number"
                android:digits="1234567890-."/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ActivityVisualizaChipTextInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ActivityVisualizaChipTextInput3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Hint3"
                android:inputType="number"
                android:digits="1234567890-() "/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ActivityVisualizaChipTextInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ActivityVisualizaChipTextInput4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Hint4"
                android:inputType="number"
                android:digits="1234567890"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ActivityVisualizaChipTextInputLayout5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ActivityVisualizaChipTextInput5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Hint5"
                android:inputType="numberDecimal"
                android:digits="1234567890,.R$"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ActivityVisualizaChipTextInputLayout6"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ActivityVisualizaChipTextInput6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Estado:"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ActivityVisualizaChipTextInputLayout7"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ActivityVisualizaChipTextInput7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Hint7"/>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/ActivityVisualizaChipButtonConfirmar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:backgroundTint="#15CD00"
            android:textSize="20sp"
            android:text="CONFIRMAR">

        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>